--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -17,6 +17,11 @@
   <% end %>
 </ul>
 
+<% if @listing.photos.exists? %>
+  <% @listing.photos.each do |photo| %>
+    <%= image_tag photo.photo.variant(resize_to_limit: [100, 100]) %>
+  <% end %>
+<% end %>
 
 <div>
   <h4>Host</h4>
