--- a/app/views/host/listings/edit.html.erb
+++ b/app/views/host/listings/edit.html.erb
@@ -13,6 +13,12 @@
 <label for="max_guests">Max Guests</label>
 <input type="number" name="listing[max_guests]" value="<%= @listing.max_guests %>"  min="1" max="100" step="1"/>
 
+<label for="nighty_price">Nightly price</label>
+<input type="number" name="listing[nighty_price]" value="<%= @listing.nighty_price %>"/>
+
+<label for="cleaning_fee">Cleaning Fee</label>
+<input type="number" name="listing[cleaning_fee]" value="<%= @listing.cleaning_fee %>"/>
+
 <label for="status">Status</label>
 <select name="listing[status]">
         <% Listing.statuses.keys.each do |status| %>
