--- a/app/views/host/listings/new.html.erb
+++ b/app/views/host/listings/new.html.erb
@@ -45,7 +45,7 @@
   </div>
 
   <label for="nightly_price">Nightly price</label>
-  <input type="number" id="nightly_price" name="listing[nightly_price]" value="" min="1" step="1">
+  <input type="number" id="nightly_price" name="listing[nighty_price]" value="" min="1" step="1">
 
   <label for="cleaning_fee">Cleaning fee</label>
   <input type="number" id="cleaning_fee" name="listing[cleaning_fee]" value="" min="1" step="1">
