--- a/app/views/host/listings/new.html.erb
+++ b/app/views/host/listings/new.html.erb
@@ -21,7 +21,7 @@
     <textarea id="about" name="listing[about]" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border border-gray-300 rounded-md"><%= @listing.about %></textarea>
   </div>
 
-  <div data-controller="address" data-action="map-loaded@window->address#initGoogle" class="sm:col-span-6">
+  <div data-controller="address" data-action="google-maps-callback@window->address#initGoogle" class="sm:col-span-6">
     <label for="address" class="block text-sm font-medium text-gray-700">
       Address
     </label>
