--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,9 +1,34 @@
-<div>
-  <h1 class="font-bold text-4xl">Listingsx</h1>
+<h1 class="text-2xl mb-4 font-bold">Listings</h1>
 
-  <ul> 
+<div class="mb-4">
+  <%== pagy_nav(@pagy) %>
+</div>
+
+<div data-controller="listing-map" data-action="google-maps-callback@window->listing-map#initGoogle" class="grid grid-cols-2 gap-4">
+  <ul role="list" data-listing-map-target="listings" class="col-span-1 grid grid-cols-2 gap-x-4 gap-y-8 sm:grid-cols-3 sm:gap-x-6 lg:grid-cols-4 xl:gap-x-8">
     <% @listings.each do |listing| %>
-      <li> <%= link_to listing.title, listing_path(listing) %></li>
+    <li class="relative" data-lat="<%= listing.lat %>" data-title="<%= listing.title %>" data-lng="<%= listing.lng %>" data-price="<%= listing.nighty_price / 100 %>">
+      <a href="<%= listing_path(listing) %>" class="group block w-full aspect-w-10 aspect-h-7 rounded-lg bg-gray-100 focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-offset-gray-100 focus-within:ring-indigo-500 overflow-hidden">
+        <% if listing.photos.first.present? %>
+           <%= image_tag listing.photos.first.photo, class: "object-cover pointer-events-none group-hover:opacity-75" %>
+        <% else %>
+          <img src="https://news.airbnb.com/wp-content/uploads/sites/4/2019/06/PJM020719Q202_Luxe_WanakaNZ_LivingRoom_0264-LightOn_R1.jpg?fit=2500%2C1666" alt="" class="object-cover pointer-events-none group-hover:opacity-75">
+        <% end %>
+        <button type="button" class="absolute inset-0 focus:outline-none">
+          <span class="sr-only">View details for <%= listing.title %></span>
+        </button>
+      </a>
+      <p class="mt-2 block text-sm font-medium text-gray-900 truncate pointer-events-none"><%= listing.title %></p>
+      <% if listing.nighty_price != nil %>
+        <p class="block text-sm font-medium text-gray-500 pointer-events-none">$<%= listing.nighty_price / 100 %></p>
+      <% end %>
+    </li>
     <% end %>
   </ul>
+  <div data-listing-map-target="map" class="cal-span-1 h-screen w-full">
+  </div>
+</div>
+
+<div class="mt-4">
+  <%== pagy_nav(@pagy) %>
 </div>
