--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,39 +1,43 @@
-<h1 class="text-2xl font-bold mb-4"><%= @listing.title %></h1>
+<div class="bg-white" data-controller="listing">
+  <div class="pt-6">
+    <div class="max-w-2xl mx-auto px-4 flex items-center space-x-2 sm:px-6 lg:max-w-7xl lg:px-8 mb-2 ">
+         <h1 class="font-semibold text-4xl"><%= @listing.title %></h1>
+    </div>
 
-<div>
-  Per night <%= number_to_currency(@listing.nighty_price / 100, precision: 0) %>
+    <div class="max-w-2xl mx-auto px-4 flex justify-between items-center space-x-2 sm:px-6 lg:max-w-7xl lg:px-8"">
+        <div>
+            <span>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline-block relative" style="bottom: 2px;" viewBox="0 0 20 20" fill="currentColor">
+                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+                </svg>
+                15 reviews
+            </span>
+        <span><%= @listing.city %>, <%= @listing.state %></span>
+        </div>
+        <div>
+            <%= link_to "", data: { controller: "share", action: "share#share"}, class: "mr-4" do %>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline-block relative" style="bottom: 1px;" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z" />
+                </svg>
+                <span>Share</span>
+             <% end %>             
+        </div>
+    </div>
+    <!-- Image gallery -->
+    <% if @listing.photos.first.present? %>
+        <div class="mt-6 max-w-2xl mx-auto sm:px-6 lg:max-w-7xl lg:px-8 lg:grid lg:grid-cols-2 lg:gap-x-8">
+            <div class="aspect-auto overflow-hidden block">
+            <%=  image_tag @listing.photos.first.photo, class: "w-full h-full object-center object-cover"  %>
+            </div>
+        </div>
+    <% end %>
+      <%= render "product_info" %>
+      <div class="max-w-2xl mx-auto sm:px-6 lg:max-w-7xl lg:px-8">
+        <hr>
+      </div>
+  </div>
 </div>
-<div>
-  Cleaning fee <%= number_to_currency(@listing.cleaning_fee / 100, precision: 0) %>
-</div>
 
-<%= link_to "Reserve", new_reservation_path(listing_id: @listing.id) %>
+<%= render "shared/modal", modal_trigger_id: "share-modal-trigger", modal_content: "listings/share_property", content_params: { listing: @listing } %>
 
-
-<%= @listing.city %>, <%= @listing.state %>
-
-<p>
-  <%= @listing.about %>
-</p>
-
-<p>
-  <%= @listing.max_guests %>
-</p>
-
-<ul>
-  <% @listing.rooms.each do |room| %>
-  <li><%= room.room_type %> beds: <%= room.beds.count %></li>
-  <% end %>
-</ul>
-
-<% if @listing.photos.exists? %>
-  <% @listing.photos.each do |photo| %>
-    <%= image_tag photo.photo.variant(resize_to_limit: [100, 100]) %>
-  <% end %>
-<% end %>
-
-<div>
-  <h4>Host</h4>
-  <%= @listing.host.email %>
-</div>
 
