--- a/app/views/listings/_product_info.html.erb
+++ b/app/views/listings/_product_info.html.erb
@@ -1,32 +1,84 @@
 <!-- Product info -->
-    <div class="max-w-2xl mx-auto pt-10 pb-16 px-4 sm:px-6 lg:max-w-7xl lg:pt-16 lg:pb-24 lg:px-8 lg:grid lg:grid-cols-3 lg:grid-rows-[auto,auto,1fr] lg:gap-x-8">
+    <div class="max-w-4xl mx-auto pt-10 pb-16 px-4 sm:px-6 lg:max-w-7xl lg:pt-16 lg:pb-24 lg:px-8 lg:grid lg:grid-cols-3 lg:grid-rows-[auto,auto,1fr] lg:gap-x-8">
       <div class="lg:col-span-2 lg:border-r lg:border-gray-200 lg:pr-8">
         <h1 class="text-1xl font-bold tracking-tight text-gray-900 sm:text-3xl">Entire rental unit hosted by <%= @listing.host.email %></h1>
       </div>
-
 <!-- Options -->
   <div 
-    class="mt-4 lg:mt-0 lg:row-span-3" 
+    class=" lg:mt-0 lg:row-span-3" 
+    data-controller="reservation"
+    data-default-checkin-date="<%= Date.tomorrow.to_formatted_s(:us_short_date) %>"
+    data-default-checkout-date="<%= (Date.tomorrow + 1.day).to_formatted_s(:us_short_date) %>"
+    data-nightly-price="<%= @listing.nighty_price %>"
+    data-service-fee-percentage="<%= 0.1 %>"
+    data-cleaning-fee="<%= @listing.cleaning_fee %>"
+
   >
     <div class="mt-10 lg:mt-0">
-      <h2 class="text-2xl font-medium text-gray-900">$ <%= @listing.nighty_price / 100 %> per night</h2>
-     <h2 class="text-2xl font-medium text-gray-900">Max guests allowed is <%= @listing.max_guests %></h2>
+    <h2 class="text-2xl font-medium text-gray-900">$ <%= @listing.nighty_price / 100 %> per night</h2>
+     <h2 class="text-2xl font-medium text-gray-900">Max Guests <%= @listing.max_guests %></h2>
+      
+      <div class="isolate -space-y-px rounded-md shadow-sm mt-6">
+        <div class="relative border border-gray-300 rounded-md rounded-b-none px-3 py-2 focus-within:z-10 focus-within:ring-1 focus-within:ring-indigo-600 focus-within:border-indigo-600">
+          <%= render partial: 'shared/errors' %>
+          <ul>
+          <p>Do not try to book these reservations</p>
+            <% @calender_events.each do |timeslot| %>
+               <% if timeslot.reservation.status != 'expired' %>
+                    <li> 
+                        <%= timeslot.start_date %>
+                        <%= timeslot.end_date %>
+                        <%= timeslot.try(:reservation).try(:status) %>
+                    </li>
+                <% end %>
+            <% end %>
+            </ul>
+            <form action="/reservations" method="post">
+            <div class="relative border border-gray-300 rounded-md rounded-t-none px-3 py-2 focus-within:z-10 focus-within:ring-1 focus-within:ring-indigo-600 focus-within:border-indigo-600">
+                    <label for="start_date" class="block text-xs font-medium text-gray-900 uppercase">
+                        Check-in
+                    </label>
+                    <input
+                        id="start_date" 
+                        type="date" 
+                        name="reservation[start_date]" 
+                        data-reservation-component-target="checkin"
+                        class="block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm" 
+                    >
+                </div>
+                <div class="mt-3 relative border border-gray-300 rounded-md rounded-t-none px-3 py-2 focus-within:z-10 focus-within:ring-1 focus-within:ring-indigo-600 focus-within:border-indigo-600">
+                    <label for="end_date" class="block text-xs font-medium text-gray-900 uppercase">Checkout</label>
+                    <input
+                        type="date"
+                        name="reservation[end_date]"
+                        id="end_date"
+                        class="block w-full border-0 p-0 text-gray-900 placeholder-gray-500 focus:ring-0 sm:text-sm"
+                        data-reservation-component-target="checkout"
+                    >
+                </div>
+
+                <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+                <input type="hidden" name="reservation[listing_id]" value="<%= @listing.id %>">
+
+                <input type="submit" value="Reserve" class='mt-2 w-full bg-indigo-600 border border-transparent rounded-md shadow-sm py-3 px-4 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-50 focus:ring-indigo-500'>
+            </form>
+        </div>
+      </div>
+      
       <div class="bg-white mt-6">
         <div class="divide-y divide-gray-200">
         </div>
         <dl class="space-y-6">
+    
           TODO
         </dl>
-
         <div class="pt-6">
-        <%= link_to "Reserve", new_reservation_path(listing_id: @listing.id), class: 'w-full bg-indigo-600 border border-transparent rounded-md shadow-sm py-3 px-4 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-50 focus:ring-indigo-500' %>
         </div>
       </div>
     </div>
   </div>
-      
 
-      <div class="py-10 lg:pt-6 lg:pb-16 lg:col-start-1 lg:col-span-2 lg:border-r lg:border-gray-200 lg:pr-8">
+  <div class="py-10 lg:pt-6 lg:pb-16 lg:col-start-1 lg:col-span-2 lg:border-r lg:border-gray-200 lg:pr-8">
         <!-- Description and details -->
         <div>
           <h3 class="sr-only">Description</h3>
@@ -47,4 +99,8 @@
       
       </div>
     </div>
-    <%= render "shared/modal", modal_trigger_id: "property-description-trigger", modal_content: "listings/property_description", content_params: { listing: @listing } %>
+
+
+  
+      
+<%= render "shared/modal", modal_trigger_id: "property-description-trigger", modal_content: "listings/property_description", content_params: { listing: @listing } %>
